--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,8 @@
 <sonar.host.url>
 http://65.0.92.205:9000/
 </sonar.host.url>
+<sonar.login>admin</sonar.login>
+<sonar.password>Saikumar@123</sonar.password> 	
 </properties>
 </profile>
 </profiles>
