--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@ http://13.126.156.68:9000/
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>	
 			</plugin>
+			<plugin>
+  				<groupId>org.jacoco</groupId>
+  				<artifactId>jacoco-maven-plugin</artifactId>
+  				<version>0.8.10-SNAPSHOT</version>
+			</plugin>
 		</plugins>
 	</build>
 
