--- a/pom.xml
+++ b/pom.xml
@@ -57,10 +57,10 @@
 <properties>
 <!-- Optional URL to server. Default value is http://localhost:9000 -->
 <sonar.host.url>
-http://13.234.231.205:9000/
+http://127.0.0.1:9001/
 </sonar.host.url>
 <sonar.login>admin</sonar.login>
-<sonar.password>Saikumar@123</sonar.password> 	
+<sonar.password>123</sonar.password> 	
 </properties>
 </profile>
 </profiles>
